@@ -1,3 +1,5 @@
+* Add BOOL_AND and BOOL_OR to SQLite backend
+
 Version 6.0.0 - 2021-05-03
 * Bug fixes (see mercurial logs for details)
 * Allow column sql types to be tested from the table handler
